Fix some FindBugs